--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "lodash": "^4.17.21",
+    "mongoose": "^8.15.1",
+    "mongoose-paginate-v2": "1.9.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   },
